ui_test/parser/fail/let_expr.camp
fn foo() {
    1 + let x = 1;
}