ui_test/parser/fail/let_expr.err
error: Let statement is not allowed in expression position
  ┌─ $DIR/let_expr.camp:2:9
  │
2 │     1 + let x = 1;
  │         ^^^^^^^^^

